remove hidden characters that were invalidating the keys

--- a/dagster_cloud.yaml
+++ b/dagster_cloud.yaml
@@ -1,6 +1,6 @@
 locations:
-  - location­_name: orchestration
-    code­_source:
-      package­_name: orchestration
+  - location_name: orchestration
+    code_source:
+      package_name: orchestration
     build:
       directory: ./orchestration
