Revert "try ./orchestration/orchestration build directory"
This reverts commit 40acbee50057a1c613290acc8f4f770a2fe4a342.

--- a/dagster_cloud.yaml
+++ b/dagster_cloud.yaml
@@ -3,4 +3,4 @@ locations:
     code_source:
       package_name: orchestration
     build:
-      directory: ./orchestration/orchestration
+      directory: ./orchestration
