use module_name in dagster_cloud.yaml

--- a/dagster_cloud.yaml
+++ b/dagster_cloud.yaml
@@ -1,6 +1,4 @@
 locations:
   - location_name: orchestration
     code_source:
-      package_name: orchestration
-    build:
-      directory: ./orchestration
+      module_name: orchestration.definitions
