add back build directory

--- a/dagster_cloud.yaml
+++ b/dagster_cloud.yaml
@@ -2,3 +2,5 @@ locations:
   - location_name: orchestration
     code_source:
       module_name: orchestration.definitions
+    build:
+      directory: ./orchestration
